[package]
name = "pathway-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
crossterm = { version = "0.26.1" }
futures = "0.3.27"
futures-timer = "3.0.2"
terminal-pixel-renderer = {path = "../terminal-pixel-renderer"}